# buildDemo

./: README.md
clangDemo/: MyClass.h  main.m
cmakeDemo/: CMakeLists.txt
makeDemo/: Makefile  MyClass.m
ninjaDemo/: .ninja_log  build.ninja
